compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__blocks_get_preserved_when_needed2.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\npub fn main() {\n    fn(x) { 1 + x }(2) * 3\n}\n"
---
----- SOURCE CODE

pub fn main() {
    fn(x) { 1 + x }(2) * 3
}


----- COMPILED JAVASCRIPT
export function main() {
  return (1 + 2) * 3;
}
