compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__do_not_inline_parameters_used_more_than_once.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\nimport testing\n\npub fn main() {\n  testing.always_inline(True)\n}\n"
---
----- SOURCE CODE

import testing

pub fn main() {
  testing.always_inline(True)
}


----- COMPILED JAVASCRIPT
import * as $testing from "../../gleam_stdlib/testing.mjs";

export function main() {
  {
    let something = true;
    if (something) {
      return something;
    } else {
      return false;
    }
  }
}
