compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__inline_anonymous_function_call.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\npub fn main() {\n  fn(a, b) { #(a, b) }(42, False)\n}\n"
---
----- SOURCE CODE

pub fn main() {
  fn(a, b) { #(a, b) }(42, False)
}


----- COMPILED JAVASCRIPT
export function main() {
  {
    let a = 42;
    let b = false;
    return [a, b];
  }
}
