compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__inline_anonymous_function_in_pipe.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\npub fn main() {\n  1 |> fn(x) { x + 1 } |> fn(y) { y * y }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  1 |> fn(x) { x + 1 } |> fn(y) { y * y }
}


----- COMPILED JAVASCRIPT
export function main() {
  let _pipe = 1;
  let _block;
  {
    let x = _pipe;
    _block = x + 1;
  }
  let _pipe$1 = _block;
  {
    let y = _pipe$1;
    return y * y;
  }
}
