compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__inline_higher_order_function.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\nimport gleam/result\n\npub fn main() {\n  result.map(Ok(10), double)\n}\n\nfn double(x) { x + x }\n"
---
----- SOURCE CODE

import gleam/result

pub fn main() {
  result.map(Ok(10), double)
}

fn double(x) { x + x }


----- COMPILED JAVASCRIPT
import * as $result from "../../gleam_stdlib/gleam/result.mjs";
import { Ok } from "../gleam.mjs";

function double(x) {
  return x + x;
}

export function main() {
  let $ = new Ok(10);
  if ($ instanceof Ok) {
    let value = $[0];
    return new Ok(double(value));
  } else {
    let error = $[0];
    return new Error(error);
  }
}
