compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__inlining__inline_shadowed_variable.snap
---
source: compiler-core/src/javascript/tests/inlining.rs
expression: "\npub fn main() {\n  let a = 10\n  let b = 20\n\n  fn(x) {\n    let a = 7\n    x + a\n  }(a + b)\n\n  a\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = 10
  let b = 20

  fn(x) {
    let a = 7
    x + a
  }(a + b)

  a
}


----- COMPILED JAVASCRIPT
export function main() {
  let a = 10;
  let b = 20;
  {
    let _inline_a_0 = 7;
    (a + b) + _inline_a_0;
  }
  return a;
}
